feat(menu): add variants menu endpoint
